PYEDJOGITV2/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    IMPORT
    FROM
    IFELSE
    VAR_CHAR
    FALSE
    TRUE
    TURTLE
    TUR

Grammar

Rule 0     S' -> program
Rule 1     program -> START EDJO VAR_ID cmq_action cfd_action SEMICOLON Vars funciones Main
Rule 2     cmq_action -> <empty>
Rule 3     cfd_action -> <empty>
Rule 4     Vars -> Tipo VAR_ID mas_vars adv_action SEMICOLON Vars
Rule 5     Vars -> <empty>
Rule 6     Tipo -> INT
Rule 7     Tipo -> DECIMAL
Rule 8     Tipo -> STRING
Rule 9     Tipo -> CHAR
Rule 10    Tipo -> BOOL
Rule 11    mas_vars -> COMMA VAR_ID mas_vars
Rule 12    mas_vars -> <empty>
Rule 13    adv_action -> <empty>
Rule 14    Exp -> ExpI pos_igual
Rule 15    pos_igual -> ASSIGN ExpI
Rule 16    pos_igual -> <empty>
Rule 17    ExpI -> ExpK pos_Operandos
Rule 18    pos_Operandos -> Operandos ExpI
Rule 19    pos_Operandos -> <empty>
Rule 20    Operandos -> LT
Rule 21    Operandos -> GT
Rule 22    Operandos -> NE
Rule 23    Operandos -> LE
Rule 24    Operandos -> GE
Rule 25    Operandos -> EQ
Rule 26    ExpK -> ExpT pos_SUMRES
Rule 27    pos_SUMRES -> PLUS ExpK
Rule 28    pos_SUMRES -> MINUS ExpK
Rule 29    pos_SUMRES -> <empty>
Rule 30    ExpT -> ExpF pos_MULTDIV
Rule 31    pos_MULTDIV -> MULT ExpT
Rule 32    pos_MULTDIV -> DIV ExpT
Rule 33    pos_MULTDIV -> <empty>
Rule 34    ExpF -> VAR_CTE
Rule 35    ExpF -> LPAREN Exp RPAREN
Rule 36    ExpF -> SLBRACKET Exp SRBRACKET
Rule 37    ExpF -> VAR_ID pos_parens
Rule 38    VAR_CTE -> VAR_INT
Rule 39    VAR_CTE -> VAR_DECIMAL
Rule 40    pos_parens -> LPAREN Exp RPAREN
Rule 41    pos_parens -> SLBRACKET Exp SRBRACKET
Rule 42    pos_parens -> <empty>
Rule 43    funciones -> tipo_funcion VAR_ID LPAREN param RPAREN adf_action LBRACKET Vars reg_brack RBRACKET enp_action funciones
Rule 44    funciones -> <empty>
Rule 45    tipo_funcion -> VOID
Rule 46    tipo_funcion -> Tipo
Rule 47    param -> Tipo VAR_ID pos_commaf
Rule 48    param -> <empty>
Rule 49    pos_commaf -> COMMA Tipo VAR_ID pos_commaf
Rule 50    pos_commaf -> <empty>
Rule 51    adf_action -> <empty>
Rule 52    enp_action -> <empty>
Rule 53    reg_brack -> Estatutos reg_brack
Rule 54    reg_brack -> <empty>
Rule 55    Estatutos -> Condicion
Rule 56    Estatutos -> Ciclo
Rule 57    Estatutos -> Return
Rule 58    Estatutos -> Exp SEMICOLON
Rule 59    Estatutos -> Print
Rule 60    Estatutos -> Llamada_Func
Rule 61    Estatutos -> TurtleMotion
Rule 62    Condicion -> IF LPAREN Exp RPAREN LBRACKET reg_brack RBRACKET pos_else
Rule 63    pos_else -> ELSE LBRACKET reg_brack RBRACKET
Rule 64    pos_else -> <empty>
Rule 65    Return -> RETURN Exp SEMICOLON
Rule 66    Print -> PRINT LPAREN VAR_STRING RPAREN SEMICOLON
Rule 67    Print -> PRINT LPAREN Exp RPAREN SEMICOLON
Rule 68    Llamada_Func -> VAR_ID LPAREN paramLlam RPAREN SEMICOLON
Rule 69    paramLlam -> Exp pos_commaLlam
Rule 70    pos_commaLlam -> COMMA paramLlam
Rule 71    pos_commaLlam -> <empty>
Rule 72    Ciclo -> For
Rule 73    Ciclo -> While
Rule 74    Ciclo -> DoWhile
Rule 75    While -> WHILE LPAREN Exp RPAREN LBRACKET reg_brack RBRACKET
Rule 76    DoWhile -> DO LBRACKET reg_brack RBRACKET WHILE LPAREN Exp RPAREN SEMICOLON
Rule 77    For -> FOR LPAREN VAR_ID ASSIGN Exp SEMICOLON Exp SEMICOLON VAR_ID Exp_ciclo RPAREN LBRACKET reg_brack RBRACKET
Rule 78    Exp_ciclo -> PLUS VAR_INT
Rule 79    Exp_ciclo -> MINUS VAR_INT
Rule 80    Exp_ciclo -> MULT VAR_INT
Rule 81    Exp_ciclo -> DIV VAR_INT
Rule 82    Exp_ciclo -> PLUSPLUS
Rule 83    Exp_ciclo -> MINUSMINUS
Rule 84    TurtleMotion -> Position
Rule 85    TurtleMotion -> Right
Rule 86    TurtleMotion -> Left
Rule 87    TurtleMotion -> Forward
Rule 88    TurtleMotion -> Circle
Rule 89    Position -> VAR_ID POINT POS LPAREN RPAREN SEMICOLON
Rule 90    Forward -> VAR_ID POINT FORWARD LPAREN Exp RPAREN SEMICOLON
Rule 91    Right -> VAR_ID POINT RIGHT LPAREN Exp RPAREN SEMICOLON
Rule 92    Left -> VAR_ID POINT LEFT LPAREN Exp RPAREN SEMICOLON
Rule 93    Circle -> VAR_ID POINT CIRCLE LPAREN Exp RPAREN SEMICOLON
Rule 94    Main -> MAIN LPAREN RPAREN LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET

Terminals, with rules where they appear

ASSIGN               : 15 77
BOOL                 : 10
CHAR                 : 9
CIRCLE               : 93
COMMA                : 11 49 70
DECIMAL              : 7
DIV                  : 32 81
DO                   : 76
EDJO                 : 1
ELSE                 : 63
EQ                   : 25
FALSE                : 
FOR                  : 77
FORWARD              : 90
FROM                 : 
GE                   : 24
GT                   : 21
IF                   : 62
IFELSE               : 
IMPORT               : 
INT                  : 6
LBRACKET             : 43 62 63 75 76 77 94
LE                   : 23
LEFT                 : 92
LPAREN               : 35 40 43 62 66 67 68 75 76 77 89 90 91 92 93 94
LT                   : 20
MAIN                 : 94
MINUS                : 28 79
MINUSMINUS           : 83
MULT                 : 31 80
NE                   : 22
PLUS                 : 27 78
PLUSPLUS             : 82
POINT                : 89 90 91 92 93
POS                  : 89
PRINT                : 66 67
RBRACKET             : 43 62 63 75 76 77 94
RET                  : 94
RETURN               : 65
RIGHT                : 91
RPAREN               : 35 40 43 62 66 67 68 75 76 77 89 90 91 92 93 94
SEMICOLON            : 1 4 58 65 66 67 68 76 77 77 89 90 91 92 93 94
SLBRACKET            : 36 41
SRBRACKET            : 36 41
START                : 1
STRING               : 8
TRUE                 : 
TUR                  : 
TURTLE               : 
VAR_CHAR             : 
VAR_DECIMAL          : 39
VAR_ID               : 1 4 11 37 43 47 49 68 77 77 89 90 91 92 93
VAR_INT              : 38 78 79 80 81
VAR_STRING           : 66
VOID                 : 45
WHILE                : 75 76
ZERO                 : 94
error                : 

Nonterminals, with rules where they appear

Ciclo                : 56
Circle               : 88
Condicion            : 55
DoWhile              : 74
Estatutos            : 53
Exp                  : 35 36 40 41 58 62 65 67 69 75 76 77 77 90 91 92 93
ExpF                 : 30
ExpI                 : 14 15 18
ExpK                 : 17 27 28
ExpT                 : 26 31 32
Exp_ciclo            : 77
For                  : 72
Forward              : 87
Left                 : 86
Llamada_Func         : 60
Main                 : 1
Operandos            : 18
Position             : 84
Print                : 59
Return               : 57
Right                : 85
Tipo                 : 4 46 47 49
TurtleMotion         : 61
VAR_CTE              : 34
Vars                 : 1 4 43 94
While                : 73
adf_action           : 43
adv_action           : 4
cfd_action           : 1
cmq_action           : 1
enp_action           : 43
funciones            : 1 43
mas_vars             : 4 11
param                : 43
paramLlam            : 68 70
pos_MULTDIV          : 30
pos_Operandos        : 17
pos_SUMRES           : 26
pos_commaLlam        : 69
pos_commaf           : 47 49
pos_else             : 62
pos_igual            : 14
pos_parens           : 37
program              : 0
reg_brack            : 43 53 62 63 75 76 77 94
tipo_funcion         : 43

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . START EDJO VAR_ID cmq_action cfd_action SEMICOLON Vars funciones Main

    START           shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> START . EDJO VAR_ID cmq_action cfd_action SEMICOLON Vars funciones Main

    EDJO            shift and go to state 3


state 3

    (1) program -> START EDJO . VAR_ID cmq_action cfd_action SEMICOLON Vars funciones Main

    VAR_ID          shift and go to state 4


state 4

    (1) program -> START EDJO VAR_ID . cmq_action cfd_action SEMICOLON Vars funciones Main
    (2) cmq_action -> .

    SEMICOLON       reduce using rule 2 (cmq_action -> .)

    cmq_action                     shift and go to state 5

state 5

    (1) program -> START EDJO VAR_ID cmq_action . cfd_action SEMICOLON Vars funciones Main
    (3) cfd_action -> .

    SEMICOLON       reduce using rule 3 (cfd_action -> .)

    cfd_action                     shift and go to state 6

state 6

    (1) program -> START EDJO VAR_ID cmq_action cfd_action . SEMICOLON Vars funciones Main

    SEMICOLON       shift and go to state 7


state 7

    (1) program -> START EDJO VAR_ID cmq_action cfd_action SEMICOLON . Vars funciones Main
    (4) Vars -> . Tipo VAR_ID mas_vars adv_action SEMICOLON Vars
    (5) Vars -> .
    (6) Tipo -> . INT
    (7) Tipo -> . DECIMAL
    (8) Tipo -> . STRING
    (9) Tipo -> . CHAR
    (10) Tipo -> . BOOL

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DECIMAL resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    VOID            reduce using rule 5 (Vars -> .)
    MAIN            reduce using rule 5 (Vars -> .)
    INT             shift and go to state 13
    DECIMAL         shift and go to state 9
    STRING          shift and go to state 14
    CHAR            shift and go to state 10
    BOOL            shift and go to state 8

  ! INT             [ reduce using rule 5 (Vars -> .) ]
  ! DECIMAL         [ reduce using rule 5 (Vars -> .) ]
  ! STRING          [ reduce using rule 5 (Vars -> .) ]
  ! CHAR            [ reduce using rule 5 (Vars -> .) ]
  ! BOOL            [ reduce using rule 5 (Vars -> .) ]

    Tipo                           shift and go to state 11
    Vars                           shift and go to state 12

state 8

    (10) Tipo -> BOOL .

    VAR_ID          reduce using rule 10 (Tipo -> BOOL .)


state 9

    (7) Tipo -> DECIMAL .

    VAR_ID          reduce using rule 7 (Tipo -> DECIMAL .)


state 10

    (9) Tipo -> CHAR .

    VAR_ID          reduce using rule 9 (Tipo -> CHAR .)


state 11

    (4) Vars -> Tipo . VAR_ID mas_vars adv_action SEMICOLON Vars

    VAR_ID          shift and go to state 15


state 12

    (1) program -> START EDJO VAR_ID cmq_action cfd_action SEMICOLON Vars . funciones Main
    (43) funciones -> . tipo_funcion VAR_ID LPAREN param RPAREN adf_action LBRACKET Vars reg_brack RBRACKET enp_action funciones
    (44) funciones -> .
    (45) tipo_funcion -> . VOID
    (46) tipo_funcion -> . Tipo
    (6) Tipo -> . INT
    (7) Tipo -> . DECIMAL
    (8) Tipo -> . STRING
    (9) Tipo -> . CHAR
    (10) Tipo -> . BOOL

    MAIN            reduce using rule 44 (funciones -> .)
    VOID            shift and go to state 17
    INT             shift and go to state 13
    DECIMAL         shift and go to state 9
    STRING          shift and go to state 14
    CHAR            shift and go to state 10
    BOOL            shift and go to state 8

    tipo_funcion                   shift and go to state 18
    Tipo                           shift and go to state 16
    funciones                      shift and go to state 19

state 13

    (6) Tipo -> INT .

    VAR_ID          reduce using rule 6 (Tipo -> INT .)


state 14

    (8) Tipo -> STRING .

    VAR_ID          reduce using rule 8 (Tipo -> STRING .)


state 15

    (4) Vars -> Tipo VAR_ID . mas_vars adv_action SEMICOLON Vars
    (11) mas_vars -> . COMMA VAR_ID mas_vars
    (12) mas_vars -> .

    COMMA           shift and go to state 21
    SEMICOLON       reduce using rule 12 (mas_vars -> .)

    mas_vars                       shift and go to state 20

state 16

    (46) tipo_funcion -> Tipo .

    VAR_ID          reduce using rule 46 (tipo_funcion -> Tipo .)


state 17

    (45) tipo_funcion -> VOID .

    VAR_ID          reduce using rule 45 (tipo_funcion -> VOID .)


state 18

    (43) funciones -> tipo_funcion . VAR_ID LPAREN param RPAREN adf_action LBRACKET Vars reg_brack RBRACKET enp_action funciones

    VAR_ID          shift and go to state 22


state 19

    (1) program -> START EDJO VAR_ID cmq_action cfd_action SEMICOLON Vars funciones . Main
    (94) Main -> . MAIN LPAREN RPAREN LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET

    MAIN            shift and go to state 23

    Main                           shift and go to state 24

state 20

    (4) Vars -> Tipo VAR_ID mas_vars . adv_action SEMICOLON Vars
    (13) adv_action -> .

    SEMICOLON       reduce using rule 13 (adv_action -> .)

    adv_action                     shift and go to state 25

state 21

    (11) mas_vars -> COMMA . VAR_ID mas_vars

    VAR_ID          shift and go to state 26


state 22

    (43) funciones -> tipo_funcion VAR_ID . LPAREN param RPAREN adf_action LBRACKET Vars reg_brack RBRACKET enp_action funciones

    LPAREN          shift and go to state 27


state 23

    (94) Main -> MAIN . LPAREN RPAREN LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET

    LPAREN          shift and go to state 28


state 24

    (1) program -> START EDJO VAR_ID cmq_action cfd_action SEMICOLON Vars funciones Main .

    $end            reduce using rule 1 (program -> START EDJO VAR_ID cmq_action cfd_action SEMICOLON Vars funciones Main .)


state 25

    (4) Vars -> Tipo VAR_ID mas_vars adv_action . SEMICOLON Vars

    SEMICOLON       shift and go to state 29


state 26

    (11) mas_vars -> COMMA VAR_ID . mas_vars
    (11) mas_vars -> . COMMA VAR_ID mas_vars
    (12) mas_vars -> .

    COMMA           shift and go to state 21
    SEMICOLON       reduce using rule 12 (mas_vars -> .)

    mas_vars                       shift and go to state 30

state 27

    (43) funciones -> tipo_funcion VAR_ID LPAREN . param RPAREN adf_action LBRACKET Vars reg_brack RBRACKET enp_action funciones
    (47) param -> . Tipo VAR_ID pos_commaf
    (48) param -> .
    (6) Tipo -> . INT
    (7) Tipo -> . DECIMAL
    (8) Tipo -> . STRING
    (9) Tipo -> . CHAR
    (10) Tipo -> . BOOL

    RPAREN          reduce using rule 48 (param -> .)
    INT             shift and go to state 13
    DECIMAL         shift and go to state 9
    STRING          shift and go to state 14
    CHAR            shift and go to state 10
    BOOL            shift and go to state 8

    param                          shift and go to state 31
    Tipo                           shift and go to state 32

state 28

    (94) Main -> MAIN LPAREN . RPAREN LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET

    RPAREN          shift and go to state 33


state 29

    (4) Vars -> Tipo VAR_ID mas_vars adv_action SEMICOLON . Vars
    (4) Vars -> . Tipo VAR_ID mas_vars adv_action SEMICOLON Vars
    (5) Vars -> .
    (6) Tipo -> . INT
    (7) Tipo -> . DECIMAL
    (8) Tipo -> . STRING
    (9) Tipo -> . CHAR
    (10) Tipo -> . BOOL

  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for DECIMAL resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for CHAR resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
    VOID            reduce using rule 5 (Vars -> .)
    MAIN            reduce using rule 5 (Vars -> .)
    IF              reduce using rule 5 (Vars -> .)
    RETURN          reduce using rule 5 (Vars -> .)
    PRINT           reduce using rule 5 (Vars -> .)
    VAR_ID          reduce using rule 5 (Vars -> .)
    FOR             reduce using rule 5 (Vars -> .)
    WHILE           reduce using rule 5 (Vars -> .)
    DO              reduce using rule 5 (Vars -> .)
    LPAREN          reduce using rule 5 (Vars -> .)
    SLBRACKET       reduce using rule 5 (Vars -> .)
    VAR_INT         reduce using rule 5 (Vars -> .)
    VAR_DECIMAL     reduce using rule 5 (Vars -> .)
    RET             reduce using rule 5 (Vars -> .)
    RBRACKET        reduce using rule 5 (Vars -> .)
    INT             shift and go to state 13
    DECIMAL         shift and go to state 9
    STRING          shift and go to state 14
    CHAR            shift and go to state 10
    BOOL            shift and go to state 8

  ! INT             [ reduce using rule 5 (Vars -> .) ]
  ! DECIMAL         [ reduce using rule 5 (Vars -> .) ]
  ! STRING          [ reduce using rule 5 (Vars -> .) ]
  ! CHAR            [ reduce using rule 5 (Vars -> .) ]
  ! BOOL            [ reduce using rule 5 (Vars -> .) ]

    Tipo                           shift and go to state 11
    Vars                           shift and go to state 34

state 30

    (11) mas_vars -> COMMA VAR_ID mas_vars .

    SEMICOLON       reduce using rule 11 (mas_vars -> COMMA VAR_ID mas_vars .)


state 31

    (43) funciones -> tipo_funcion VAR_ID LPAREN param . RPAREN adf_action LBRACKET Vars reg_brack RBRACKET enp_action funciones

    RPAREN          shift and go to state 35


state 32

    (47) param -> Tipo . VAR_ID pos_commaf

    VAR_ID          shift and go to state 36


state 33

    (94) Main -> MAIN LPAREN RPAREN . LBRACKET Vars reg_brack RET ZERO SEMICOLON RBRACKET

    LBRACKET        shift and go to state 37


state 34

    (4) Vars -> Tipo VAR_ID mas_vars adv_action SEMICOLON Vars .
